--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Todo App">
+    <meta property="og:description" content="Recording daily tasks">
+    <meta property="og:image" content="image/todo icon.png">
+    <meta property="og:type" content="website">
+
     <link rel="shortcut icon" href="image/todo icon.png" type="image/x-icon">
     <title>Todo App</title>
     <!-- fonts -->
@@ -28,6 +33,8 @@
     />
   </head>
   <body>
+    <!-- dark mode -->
+    <!-- <input type="checkbox" onclick="body.classList.toggle('dark')"> -->
     <section class="w-75 m-auto my-lg-5 my-3">
       <!-- status-bar -->
       <div
